--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,10 +1,24 @@
-<nav>
-{%- for item in include.menu -%}
-  {%- assign node = site.pages | where: "name", item.file | first -%}
-  {%- assign url = item.url | default: node.url -%}
-  {%- assign title = item.title | default: node.title -%}
-  <a href="{{ url | relative_url }}" {% if url == page.url %}class="selected"{% endif %}>
-    {%- if item.icon -%}<svg aria-label="{{ title }}" class="icon"><use xlink:href="{{ "/assets/fontawesome/icons.svg" | relative_url }}#{{ item.icon }}"></use></svg>{%- else -%}{{ title }}{%- endif -%}
-  </a>
-{%- endfor -%}
-</nav>
+<nav class="header-menu" id="header-menu">
+                     {% if site.data.menus.primary[0] %}
+                        {% for item in site.data.menus.primary %}
+                           {% if item.subfolderitems[0] %}
+                              <ul class="menu">
+                              {% for entry in item.subfolderitems %}
+                                    <li class="{% if entry.subsubfolderitems[0] %}has-sub{% endif %} menu-item">
+                                       <a class="menu-link nav-link {% if entry.subsubfolderitems[0] %}menu-toggle{% endif %}" href="{{ entry.url }}">{{ entry.name }}</a>
+                                       {% if entry.subsubfolderitems[0] %}
+                                          <ul class="menu-sub menu-drop">
+                                             {% for subentry in entry.subsubfolderitems %}
+                                                <li class="menu-item">
+                                                   <a class="menu-link nav-link" href="{{ subentry.url }}">{{ subentry.name }}</a>
+                                                </li>
+                                             {% endfor %}
+                                          </ul>
+                                       {% endif %}
+                                    </li>
+                              {% endfor %}
+                              </ul>
+                           {% endif %}
+                        {% endfor %}
+                     {% endif %}                    
+                 </nav>
