--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,24 +1,31 @@
-<nav class="header-menu" id="header-menu">
-                     {% if site.data.menus.primary[0] %}
-                        {% for item in site.data.menus.primary %}
-                           {% if item.subfolderitems[0] %}
-                              <ul class="menu">
-                              {% for entry in item.subfolderitems %}
-                                    <li class="{% if entry.subsubfolderitems[0] %}has-sub{% endif %} menu-item">
-                                       <a class="menu-link nav-link {% if entry.subsubfolderitems[0] %}menu-toggle{% endif %}" href="{{ entry.url }}">{{ entry.name }}</a>
-                                       {% if entry.subsubfolderitems[0] %}
-                                          <ul class="menu-sub menu-drop">
-                                             {% for subentry in entry.subsubfolderitems %}
-                                                <li class="menu-item">
-                                                   <a class="menu-link nav-link" href="{{ subentry.url }}">{{ subentry.name }}</a>
-                                                </li>
-                                             {% endfor %}
-                                          </ul>
-                                       {% endif %}
-                                    </li>
-                              {% endfor %}
-                              </ul>
-                           {% endif %}
+<nav id="navbar" class="collapse navbar-collapse">
+    <ul class="nav navbar-nav">
+        {% assign links = site.data.navigation %}
+        {% for link in links %}
+            {% assign class = nil %}
+            {% if page.url contains link.url %}
+                {% assign class = 'active' %}
+            {% endif %}
+            {% if link.sublinks %}
+                <li class="dropdown {{ class }}">
+                    <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        {% for sublink in link.sublinks %}
+                            {% if sublink.title == 'separator' %}
+                                <li role="separator" class="divider"></li>
+                            {% else %}
+                                <li>
+                                    <a href="{{ site.url }}{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
+                                </li>
+                            {% endif %}
                         {% endfor %}
-                     {% endif %}                    
-                 </nav>
+                    </ul>
+                </li>
+            {% else %}
+                <li class="{{ class }}">
+                    <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
+                </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+</nav>
